fixed alignment

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .nav_links{
     list-style: none;
     margin-left: 200px;
-    
+    height: 30px;
 }
 
 .nav_links li {
@@ -70,7 +70,7 @@ body {
   padding: 10px 25px;
   border-radius: 5px;
   border: none;
-
+  
 }
 
 .signin:hover {
